# rust-workshop

./: .gitignore  Cargo.toml  index.html
public/: simpsons.css  styles.css
src/: lib.rs  main.rs
