[package]
name = "rust-workshop"
version = "0.1.0"
edition="2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "^0.3.14"
seed = "^0.3.6"
wasm-bindgen = "^0.2.42"
web-sys = "^0.3.19"
js-sys = "*"

# For serialization, eg sending requests to a server. Otherwise, not required.
serde = { version = "^1.0.85", features = ['derive'] }
futures = "^0.1.26"